responsive our specialties

--- a/about.html
+++ b/about.html
@@ -156,114 +156,110 @@
     </header>
 
 
-
-
-
-
-
-    <!-- Our Story Start -->
-    <section class="container-fluid py-5">
-        <div class="container mt-lg-5 mt-2">
-            <div class="row">
-                <div class="col-lg-4 col-sm-12 mb-sm-3 mx-sm-3 mx-lg-0">
-                    <h1 class="fw-bold" style="font-size: 57px;">Our Story.</h1>
-                </div>
-                <div class="col-lg-6 col-sm-12">
-                    <p class="fw-medium text-start  fs-6 fs-sm-6 nunito-custom mx-sm-3 mx-lg-0" style="color: #878484;">
-                        Mattis nisi, ultricies nunc pellentesque pulvinar malesuada habitant in. Sed sagittis lectus ut
-                        euismod. Mauris, dui viverra a tincidunt tellus tempus amet. Posuere massa at ornare nulla
-                        facilisi. Dignissim volutpat velit ut dignissim aliquet nisl, pretium, viverra
-                        bibendum.<br /><br />
-                        Consequat facilisi ultricies integer eu nibh pellentesque. Morbi ac sit ultrices quis dignissim
-                        lectus. Pellentesque nisl, ac, bibendum arcu vestibulum aliquam.
-                    </p>
-                </div>
+<!-- Our Story Start -->
+<section class="container-fluid py-5 py-md-3">
+    <div class="container mt-lg-5 mt-2">
+        <div class="row">
+            <div class="col-lg-4 col-sm-12 mb-sm-3">
+                <h1 class="fw-bold" style="font-size: 57px;">Our Story</h1>
             </div>
+            <div class="col-lg-8 col-md-9 col-sm-12">
+                <p class="fw-medium mt-3 text-start fs-6 fs-sm-6 nunito-custom mx-sm-3 mx-lg-3" style="color: #878484;">
+                    Mattis nisi, ultricies nunc pellentesque pulvinar malesuada habitant in. Sed sagittis lectus ut
+                    euismod. Mauris, dui viverra a tincidunt tellus tempus amet. Posuere massa at ornare nulla
+                    facilisi. Dignissim volutpat velit ut dignissim aliquet nisl, pretium, viverra
+                    bibendum.<br /><br />
+                    Consequat facilisi ultricies integer eu nibh pellentesque. Morbi ac sit ultrices quis dignissim
+                    lectus. Pellentesque nisl, ac, bibendum arcu vestibulum aliquam.
+                </p>
+            </div>
+        </div>
 
-            <div class="container mt-sm-5  position-relative">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12 mt-sm-1 ">
-                        <div class="row">
-                            <div class="col-md-8 ">
-                                <!-- First Component -->
-                                <div class="d-flex align-items-start mb-1">
-                                    <div class="position-relative me-4">
-                                        <i class="fa-solid fa-circle fs-1"></i>
-                                        <i
-                                            class="fa-solid fa-box position-absolute top-50 start-50 translate-middle fs-6 text-white"></i>
-                                    </div>
-                                    <div>
-                                        <h5 class="text-dark mb-1 text-start text-nowrap fw-semibold"
-                                            style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                                            Hand-crafted Decor
-                                        </h5>
-                                        <p class="text-muted fs-6 mb-0 text-start text-nowrap">
-                                            In total 650m² mix of styles and<br /> colors.
-                                        </p>
-                                        <hr class="my-4 w-100" style="color: #d5d5d5;" />
-                                    </div>
+        <div class="container mt-sm-4 mt-md-1">
+            <div class="row">
+                <div class="col-lg-4 col-sm-12 mt-sm-1 ">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <!-- First Component -->
+                            <div class="d-flex align-items-start mb-1 mb-md-0">
+                                <div class="position-relative me-4">
+                                    <i class="fa-solid fa-circle fs-1"></i>
+                                    <i class="fa-solid fa-box position-absolute top-50 start-50 translate-middle fs-6 text-white"></i>
                                 </div>
-
-                                <!-- Second Component -->
-                                <div class="d-flex align-items-start mb-1">
-                                    <div class="position-relative me-4">
-                                        <i class="fa-solid fa-circle fs-1"></i>
-                                        <i
-                                            class="fa-solid fa-mug-saucer position-absolute top-50 start-50 translate-middle fs-6 text-white"></i>
-                                    </div>
-                                    <div>
-                                        <h5 class="text-dark mb-1 text-start text-nowrap fw-semibold"
-                                            style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                                            Cozy Place
-                                        </h5>
-                                        <p class="text-muted fs-6 mb-0 text-start text-nowrap">Feel at home and find
-                                            your<br /> atmosphere.</p>
-                                        <hr class="my-4 w-100" style="color: #d5d5d5;" />
-                                    </div>
+                                <div>
+                                    <h5 class="text-dark mb-1 mb-md-0 text-start text-nowrap fw-semibold"
+                                        style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                                        Hand-crafted Decor
+                                    </h5>
+                                    <p class="text-muted fs-6 mb-0 text-start text-nowrap">
+                                        In total 650m² mix of styles and<br /> colors.
+                                    </p>
+                                    <hr class="my-3 my-md-3 w-100" style="color: #d5d5d5;" />
                                 </div>
+                            </div>
 
-                                <!-- Third Component -->
-                                <div class="d-flex align-items-start mb-1">
-                                    <div class="position-relative me-4">
-                                        <i class="fa-solid fa-circle fs-1"></i>
-                                        <i
-                                            class="fa-solid fa-music position-absolute top-50 start-50 translate-middle fs-6 text-white"></i>
-                                    </div>
-                                    <div>
-                                        <h5 class="text-dark mb-1 text-start text-nowrap fw-semibold"
-                                            style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                                            Relax Atmosphere
-                                        </h5>
-                                        <p class="text-muted fs-6 mb-0 text-start text-nowrap">Take refuge in our
-                                            greenery and<br /> away from the crowds.</p>
-                                    </div>
+                            <!-- Second Component -->
+                            <div class="d-flex align-items-start mb-1 mb-md-0">
+                                <div class="position-relative me-4">
+                                    <i class="fa-solid fa-circle fs-1"></i>
+                                    <i class="fa-solid fa-mug-saucer position-absolute top-50 start-50 translate-middle fs-6 text-white"></i>
+                                </div>
+                                <div>
+                                    <h5 class="text-dark mb-1 mb-md-0 text-start text-nowrap fw-semibold"
+                                        style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                                        Cozy Place
+                                    </h5>
+                                    <p class="text-muted fs-6 mb-0 text-start text-nowrap">Feel at home and find
+                                        your<br /> atmosphere.</p>
+                                    <hr class="my-3 my-md-3 w-100" style="color: #d5d5d5;" />
+                                </div>
+                            </div>
+
+                            <!-- Third Component -->
+                            <div class="d-flex align-items-start mb-1 mb-md-0">
+                                <div class="position-relative me-4">
+                                    <i class="fa-solid fa-circle fs-1"></i>
+                                    <i class="fa-solid fa-music position-absolute top-50 start-50 translate-middle fs-6 text-white"></i>
+                                </div>
+                                <div>
+                                    <h5 class="text-dark mb-1 mb-md-0 text-start text-nowrap fw-semibold"
+                                        style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                                        Relax Atmosphere
+                                    </h5>
+                                    <p class="text-muted fs-6 mb-0 text-start text-nowrap">Take refuge in our
+                                        greenery and<br /> away from the crowds.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8 mt-sm-5">
-                        <img src="./img/inside-restaurant-topview.jpg" class="img-fluid position-absolute" alt="">
+                </div>
+                <div class="col-lg-8 col-md-12 col-sm-12 col-12">
+                    <div class="position-relative">
+                        <img src="./img/inside-restaurant-topview.jpg" class="img-fluid position-absolute mt-md-3 mt-0 w-100" alt="">
                     </div>
                 </div>
             </div>
-
         </div>
-    </section>
-    <!-- Our Story End -->
 
- <!-- our specialties start -->
-<section class="container-fluid py-5 mt-sm-5" style="background-color: #1a1a1a;">
+    </div>
+</section>
+<!-- Our Story End -->
+
+
+<!-- our specialties start -->
+<section class="container-fluid py-2 py-lg-5 py-md-5 mt-md-5" style="background-color: #1a1a1a;">
     <div class="container">
-        <div class="row" style="margin-top: 160px;">
-            <div class="col-lg-4 col-12 mb-5 text-center text-lg-start">
-                <h1 class="position-relative text-nowrap text-white mt-5"
-                    style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+        <div class="row text-center text-lg-start" style="margin-top: 160px;">
+            <div class="col-lg-4 mb-5 mb-md-0 text-center text-lg-start mt-5 d-none d-lg-block d-md-none d-sm-none">
+                <h1 class="text-white text-nowrap"
+                    style="font-size: 55px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                     Our Specialties
                 </h1>
+               
                 <div>
-                    <p class="position-relative text-start text-nowrap text-white fs-6">
-                        Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices
-                        quis<br /> dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
+                    <p class="text-md-center text-lg-start text-center  text-white fs-6">
+                        Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices quis<br />
+                        dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
                     </p>
                     <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font"
                         style="padding: 10px; font-size: 12px;">
@@ -271,32 +267,89 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-8 d-flex flex-wrap justify-content-center">
-                <div class="col-md-6 col-12 mb-4">
-                    <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid mb-2" alt="Toasted Bread with Grape">
-                    <p class="text-white text-center">
-                        <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
-                        <br />
-                        <label>Bread / Cream / Grape</label>
-                        <br />
-                        <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">8.50</strong>
+            <div class="col-md-12 mb-5 mb-md-0 text-center text-lg-start mt-md-5 py-md-5 d-none d-lg-none d-md-block d-sm-none" style="position: relative;top: 50px;">
+                <h1 class="text-nowrap text-white mt-5"
+                    style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                    Our Specialties
+                </h1>
+                <div>
+                    <p class="text-md-center text-lg-start text-nowrap text-white fs-6">
+                        Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices quis<br />
+                        dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
                     </p>
+                    <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font"
+                        style="padding: 10px; font-size: 12px;">
+                        View All Menu
+                    </a>
                 </div>
-                <div class="col-md-6 col-12 mb-4">
-                    <img src="./img/nyus-cheesy-fruits-cake.png" class="img-fluid mb-2" alt="Cheesy Fruits Cake">
-                    <p class="text-white text-center">
-                        <label class="nunito-custom">NYUS CHEESY FRUITS CAKE</label>
-                        <br />
-                        <label>Cake / Fruits / Cheese</label>
-                        <br />
-                        <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">10.00</strong>
+            </div>
+            <div class="col-12 mt-0 text-center text-lg-start d-block d-lg-none d-md-none d-sm-none">
+                <h1 class="text-nowrap mt-3 text-white"
+                    style="font-size: 40px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" >
+                    Our Specialties
+                </h1>
+                <div>
+                    <p class="text-md-center text-lg-start text-nowrap text-white fs-6">
+                        Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices quis<br />
+                        dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
                     </p>
+                    <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font"
+                        style="padding: 10px; font-size: 12px;">
+                        View All Menu
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 mt-5 text-center text-lg-start d-none d-lg-none d-md-none d-sm-block">
+                <h1 class="text-nowrap text-white mt-5"
+                    style="font-size: 40px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;" >
+                    Our Specialties
+                </h1>
+                <div>
+                    <p class="text-md-center text-lg-start text-nowrap text-white fs-6">
+                        Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices quis<br />
+                        dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
+                    </p>
+                    <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font"
+                        style="padding: 10px; font-size: 12px;">
+                        View All Menu
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-8 mt-sm-5 mt-lg-5 mt-md-3 d-flex flex-wrap justify-content-center">
+                <div class="col-md-6 col-12 mb-4 d-flex flex-column align-items-center">
+                    <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid w-75 w-md-50 d-none d-lg-block d-md-block d-sm-none" alt="Toasted Bread with Grape">
+                    <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid w-50 mt-5 d-block d-lg-none d-md-none d-sm-block" alt="Toasted Bread with Grape">
+                    <div class="text-center text-white mt-3">
+                        <p class="mb-0">
+                            <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
+                            <br />
+                            <label>Bread / Cream / Grape</label>
+                            <br />
+                            <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">8.50</strong>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-12 mb-4 d-flex flex-column align-items-center">
+                    <img src="./img/nyus-cheesy-fruits-cake.png" class="img-fluid w-75 w-md-50 d-none d-lg-block d-md-block d-sm-none" alt="Cheesy Fruits Cake">
+                    <img src="./img/nyus-cheesy-fruits-cake.png" class="img-fluid w-50  d-block d-lg-none d-md-none d-sm-block" alt="Cheesy Fruits Cake">
+                    <div class="text-center text-white mt-3">
+                        <p class="mb-0">
+                            <label class="nunito-custom">NYUS CHEESY FRUITS CAKE</label>
+                            <br />
+                            <label>Cake / Fruits / Cheese</label>
+                            <br />
+                            <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">10.00</strong>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <!-- our specialties end -->
+
+
+
 
 
     <!-- meet the team start -->
