--- a/menu.html
+++ b/menu.html
@@ -455,22 +455,21 @@
 
     <!-- reservation start -->
     <section
-        style="background-image: url('/img/testimonail-hero-bg.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 80vh;">
-        <div class="container-xxl py-5 mb-5 d-flex justify-content-center">
-            <div class="container my-5 py-5 text-center">
+        style="background-image: url('/img/testimonail-hero-bg.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 70vh;">
+        <div class="container-xxl py-4 py-lg-5 d-flex justify-content-center">
+            <div class="container my-0 my-lg-3 py-4 py-lg-2 my-md-4 my-sm-4 text-center">
                 <div class="row align-items-center g-5">
                     <div class="col-lg-6 mx-auto">
                         <h1 class="display-3 text-white fw-semibold nunito-custom " style="font-size: 55px;">Reservation
                         </h1>
-                        <p class="text-white animated sliderInLeft mb-4 pb-2 mt-4">Neque elit, rutrum in laoreet nec
+                        <p class="text-white  mb-4 pb-2 mt-4">Neque elit, rutrum in laoreet nec
                             eget scelerisque volutpat sit. Bibendum tincidunt a scelerisque consectetur ultrices
                             elementum pulvinar non. </p>
                         <a href="/reservation.html"
                             class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
                             style="padding: 10px;">Book a table now</a>
-                        <p class="text-white custom-font mt-lg-5">Telephone Reservations</p>
-                        <h1 class="text-white "
-                            style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 60px;">
+                        <p class="text-white custom-font mt-lg-5 mt-4">Telephone Reservations</p>
+                        <h1 class="text-white">
                             12 34 56 7890</h1>
                     </div>
                 </div>
