--- a/testimonial.html
+++ b/testimonial.html
@@ -128,18 +128,20 @@
         <div class="container-xxl py-5 mb-5 d-flex justify-content-center">
             <div class="container my-5 py-5 text-center">
                 <div class="row align-items-center g-5">
-                    <div class="col-lg-6 mx-auto">
-                        <h1 class="display-3 text-white fw-bold" style="font-size: 73px;">Testimonial</h1>
-                        <p class="text-white animated sliderInLeft mb-4 pb-2 mt-4">Massa praesent sit suspendisse ac
-                            volutpat amet.<br /> Commodo elit at non neque ullamcorper id.</p>
+                    <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
+                        <h1 class="display-2 text-white fw-bold">Testimonial</h1>
+                        <p class="text-white mb-4 pb-2 mt-4">
+                            Massa praesent sit suspendisse ac volutpat amet.<br />
+                            Commodo elit at non neque ullamcorper id.
+                        </p>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center" style="margin-top: 75px;">
-                    <div class="border-start border-1 border-warning" style="height: 86px;"></div>
+                <div class="d-flex justify-content-center mt-4">
+                    <div class="border-start border-1 border-warning" style="height: 60px;"></div>
                 </div>
             </div>
         </div>
-        <!-- nav body end -->
+        
         </div>
     </header>
 
@@ -283,13 +285,13 @@
             </div>
             <div class="row mt-lg-5 mt-md-4 mt-sm-4 mt-5">
                 <img src="./img/plate.png" class="img-fluid  position-absolute d-none d-lg-block"
-                    style="width: 25%;left: 42%;">
+                    style="width: 20%;left: 42%;">
                 <img src="./img/plate.png" class="img-fluid  position-absolute d-none d-lg-none d-md-block"
-                    style="width: 45%;left: 33%;">
+                    style="width: 40%;left: 33%;">
                 <img src="./img/plate.png" class="img-fluid  position-absolute d-none d-lg-none d-md-none d-sm-block"
-                    style="width: 45%;left: 33%;">
+                    style="width: 40%;left: 33%;">
                 <img src="./img/plate.png" class="img-fluid  position-absolute d-block d-lg-none d-md-none d-sm-none"
-                    style="width: 60%;left: 30%;">
+                    style="width: 50%;left: 30%;">
 
             </div>
         </div>
@@ -299,31 +301,30 @@
 
 
     <!-- reservation start -->
-    <section class="mt-4 mt-lg-4 mt-md-5 mt-sm-5 "
-        style="background-image: url('/img/inside-restaurant-topview.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 80vh;">
-        <div class="container-xxl py-5 mb-5 d-flex justify-content-center">
-            <div class="container my-5 py-5 text-center">
-                <div class="row align-items-center g-5">
-                    <div class="col-lg-6 mx-auto">
-                        <h1 class="display-3 text-white fw-bold nunito-custom " style="font-size: 50px;">Reservation
-                        </h1>
-                        <p class="text-white mb-4 pb-2 mt-4">Neque elit, rutrum in laoreet nec
-                            eget scelerisque volutpat sit. Bibendum tincidunt a scelerisque consectetur ultrices
-                            elementum pulvinar non. </p>
-                        <a href="/reservation.html"
-                            class="btn btn-outline-light px-3 border-2 text-uppercase rounded-0 custom-font"
-                            style="padding: 10px;font-size: small;">Book a table now</a>
-                        <p class="text-white nunito-custom text-uppercase mt-lg-5" style="font-size: small;">Telephone
-                            Reservations</p>
-                        <h1 class="text-white "
-                            style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 60px;">
-                            12 34 56 7890</h1>
-                    </div>
+    <section
+    style="background-image: url('/img/testimonail-hero-bg.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; height: 6g0vh;">
+    <div class="container-xxl py-3 py-lg-0 py-md-3 d-flex justify-content-center">
+        <div class="container my-3 my-lg-3 py-4 py-lg-3 my-md-5 text-center">
+            <div class="row align-items-center g-5">
+                <div class="col-lg-6 mx-auto text-center">
+                    <h1 class="display-1 mt-4 mt-sm-4 mt-md-5 text-white fw-semibold nunito-custom ">Reservation
+                    </h1>
+                    <p class="text-white  mb-4 pb-2 pb-md-0 mt-2 mt-sm-1 mt-md-1">Neque elit, rutrum in laoreet nec
+                        eget scelerisque volutpat sit. Bibendum tincidunt a scelerisque consectetur ultrices
+                        elementum pulvinar non. </p>
+                    <a href="/reservation.html"
+                        class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
+                        style="padding: 10px;">Book a table now</a>
+                    <p class="text-white custom-font mt-lg-4 mt-4">Telephone Reservations</p>
+                    <h1 class="text-white">
+                        12 34 56 7890</h1>
                 </div>
             </div>
         </div>
-        </div>
-    </section>
+    </div>
+    </div>
+</section>
+ 
     <!-- reservation end -->
 
 
