--- a/about.html
+++ b/about.html
@@ -127,28 +127,29 @@
         </nav>
 
 <!-- Nav Body Start -->
-<div class="container-xxl py-5 mb-5 d-flex justify-content-center">
+<div class="container-xxl py-5 mb-5 d-flex justify-content-center position-relative">
     <div class="container my-5 py-5 text-center">
         <div class="row align-items-center g-5">
             <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
                 <h1 class="display-2 text-white fw-bold">About Us</h1>
-                <p class="text-white mb-4 pb-2 mt-4">
+                <p class="text-white  mb-4 pb-2 mt-4">
                     Massa praesent sit suspendisse ac volutpat amet.<br />
                     Commodo elit at non neque ullamcorper id.
                 </p>
             </div>
         </div>
-        <div class="d-flex justify-content-center mt-4">
-            <div class="border-start border-1 border-warning" style="height: 60px;"></div>
+        <!-- vertical line -->
+        <div class="d-flex justify-content-center position-relative mt-4">
+            <div class="bg-warning d-none d-sm-none d-md-none d-lg-block d-xl-none" style="width: 1px; height: 100px;"></div>
+            <div class="bg-warning d-none d-sm-none d-md-none d-lg-none d-xl-block" style="width: 1px; height: 100px;"></div>
+            <div class="bg-warning d-none d-sm-none d-md-block d-lg-none d-xl-none" style="width: 1px; height: 100px;"></div>
+            <div class="bg-warning d-block d-sm-none d-md-none d-lg-none d-xl-none" style="width: 1px; height: 70px;"></div>
+            <div class="bg-warning d-none d-sm-block d-md-none d-lg-none d-xl-none" style="width: 1px; height: 100px;"></div>
+
         </div>
     </div>
 </div>
 <!-- Nav Body End -->
-
-
-
-
-
 
 
 
